--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      FLASK_ENV: testing 
 
     steps:
       - name: Checkout
@@ -26,9 +28,7 @@ jobs:
           pip install pytest flake8
 
       - name: Lint with flake8
-        run: |
-          flake8 . --max-line-length=120
+        run: flake8 . --max-line-length=120
 
       - name: Run tests
         run: pytest -q
-
