--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -1,8 +1,8 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
 
 scrape_configs:
   - job_name: "infra-monitor"
     static_configs:
-      - targets: ["localhost:5000"]
+      - targets: ["app:5000"]
 
