--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             cd ~/infra-monitor
-            docker compose pull
-            docker compose up -d
+            docker-compose pull
+            docker-compose up -d
